Fix LPR printing for applications that use gtkprint.  See http://bugzilla.gnome.org/show_bug.cgi?id=390159 for more details.

Reported by:	oliver